Copied SimpleJobScheduler from trunk r10010.
Merged relevant bits of r9035, r9481 and r9911. I did not simply copy 
the whole pool from trunk, as this is planned for 1.9.1. NDGF however 
relies on the changes in SimpleJobScheduler, which is the motivation for 
copying it for 1.9.0.